done using mongodb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=offer-management-be
-spring.datasource.url=jdbc:postgresql://localhost:5432/offer
-spring.datasource.username=postgres
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:postgresql://localhost:5432/offer
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+spring.data.mongodb.database= offer-manage
+spring.data.mongodb.uri=mongodb+srv://admin:admin123@offer-manage.mmcf7.mongodb.net/?retryWrites=true&w=majority&appName=offer-manage
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
